# smartta-final-bot

./: .gitignore  API_IMPROVEMENTS_APPLIED.md  BEGINNER_FRIENDLY_JOURNEY.md  BUTTON_TYPE_FIX.md  CODE_REVIEW_FIXES.md  CONTEXT_AND_FRIENDLY_CHAT_FIXES.md  CRITICAL_BUGS_FIXED.md  CRITICAL_FIXES_APPLIED.md  Dockerfile  ENVIRONMENT_SETUP.md  FINAL_COMPLETION_SUMMARY.md  FINAL_FIX_VALIDATION_SUMMARY.md  FINAL_PATCHES_SUMMARY.md  FINAL_POLISH_TWEAKS.md  FIX_IMPLEMENTATION_SUMMARY.md  GENERIC_IMPROVEMENTS_SUMMARY.md  GLOBAL_PLACEHOLDER_VALIDATION.md  HEADER_ENFORCEMENT_COMPLETE.md  INTERACTIVE_BACKEND_DOCUMENTATION.md  LOGIN_API_ANALYSIS.md  META_HEADER_SPEC_IMPLEMENTATION.md  Makefile  NLP_DIRECTIVE_PARSING_ENHANCED.md  POLICY_ALIGNMENT_FIXES.md  PRODUCTION_CHECKLIST.md  PYTEST_IMPLEMENTATION_COMPLETE.md  README.md  RESTRUCTURE_SUMMARY.md  SCHEMAS_IMPROVEMENTS_APPLIED.md  SECURITY_HARDENING.md  SESSIONS_IMPROVEMENTS_APPLIED.md  SESSION_FLOW_ANALYSIS.md  SESSION_SUMMARY_NLP_ENHANCED.md  UI_INTEGRATION_GUIDE.md  USERS_IMPLEMENTATION_STATUS.md  about.txt  debug_chat_issues.py  debug_e2e_missing.py  debug_persistence.py  debug_validation.py  (+63 more)
app/: auth.py  config.py  db.py  directives.py  friendly_prompts.py  llm.py  main.py  models.py  prompts.py  repo.py  schemas.py  utils.py  validator.py
app/interactive/: __init__.py  routes.py
config/: whatsapp.yaml
data/: watemp.db  watemp.db-shm  watemp.db-wal
migrations/: README
tests/: conftest.py  test_quick_simple.py  test_sessions.py  test_users.py
whatsapp_template_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+6 files in other folders)
