[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-template-builder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
   "fastapi>=0.116.1",
   "uvicorn[standard]>=0.35.0",
   "pydantic>=2.11.0",
   "SQLAlchemy>=2.0.43",
   "asyncpg>=0.30.0",
   "aiosqlite>=0.19.0",
   "jsonschema>=4.25.1",
   "pyyaml>=6.0.2",
   "httpx>=0.28.1",
   "python-dotenv>=1.0.1",
   "orjson>=3.10.7",
   "tenacity>=9.0.0",
   "openai>=1.45.0"
 ]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"